--- a/etc/desktop-session/desktop-session.conf
+++ b/etc/desktop-session/desktop-session.conf
@@ -30,6 +30,12 @@ FORCE_LOAD="false"
 #SESSION_PROTECT="false #Just update me, I dont want to worry about falling behind.
 SESSION_PROTECT="false"
 
+
+#Notification Dialog
+#This is where to enable / disable the session loading dialog
+#Options: true | false
+NOTIFICATION_DIALOG="true"
+
 #Notification text or program
 #This is where the text is set for the notification that the session is loading.
 #This can be a specified text string or a program that will return a text string
@@ -41,7 +47,7 @@ NOTIFICATION_TEXT="Session is Loading, Please Wait....."
 #Startup Dialog
 #This is where to enable / disable the session startup dialog
 #Options: true | false
-STARTUP_DIALOG="true"
+STARTUP_DIALOG="false"
 
 #Startup Dialog Command
 #This is where to set the startup dialog command
