--- a/ds-mouse/mouse.conf
+++ b/ds-mouse/mouse.conf
@@ -2,15 +2,16 @@
 #This is used by ds-mouse / ds-mouse.py
 
 #Mouse acceleration
-#Value: in pixels 
-#Range: 0 - 100
-ACCELERATION=0
+#Anything outside of the range value will result in the default settings
+#Value: Multiplication Value of default speed. (default X ACCELERATION = speed) 
+#Range: 0 - 20
+ACCELERATION=5
 
 #Mouse threshold
-#Value: in pixels
+#Anything outside of the range value will result in the default settings
+#Value: Pixels. The number of pixels the cursor must move to begin accelerating
 #Range: 0 - 100
-#Value is in ratio to acceleration
-THRESHOLD=0
+THRESHOLD=1
 
 #Button Order
 #0 = right hand
@@ -19,5 +20,5 @@ BUTTONORDER=0
 
 #Cursor Size
 #Value: in pixels
-#Range: 0-50
-SIZE=0
+#Range: 10-50
+SIZE=10
