Added startup sound option with Eino`s "Native_Amreican_Flute_Edit.ogg" as startup.ogg sound file

--- a/etc/desktop-session/desktop-session.conf
+++ b/etc/desktop-session/desktop-session.conf
@@ -42,7 +42,16 @@ NOTIFICATION_DIALOG="true"
 #Examples:
 #NOTIFICATION_TEXT="Session is Loading, Please Wait....."
 #NOTIFICATION_TEXT="/usr/games/fortune"
-NOTIFICATION_TEXT="Session is Loading, Please Wait....."
+NOTIFICATION_TEXT="Session is Loading, Please Wait....." 
+
+#Startup Sound
+#Play Sound when loading the desktop (uses terminal command play)
+#Options: true | false
+STARTUP_SOUND="true"
+
+#Startup Sound File
+#Location of the file for the startup sound 
+STARTUP_SOUND_FILE="/etc/desktop-session/startup.ogg"
 
 #Startup Dialog
 #This is where to enable / disable the session startup dialog
